# pierogi-rust

./: .gitignore  Cargo.toml  README.md
src/: main.rs  main.rs.bak
