[package]
name = "pierogi_rust"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-embed="8.2.0"
winit = "0.29.10"
softbuffer = "0.4.1"
image = "0.24.8"
sysinfo = "0.30.5"
rand = "0.8.5"
webbrowser = "0.8.12"
